force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_SW_and_GW_GPM__c.field-meta.xml
<CustomField>
    <fullName>AVO_SW_and_GW_GPM__c</fullName>
    <formula>IF(
  NOT(ISBLANK(AVO_GW_Gallons_Per_Minute__c)),
  AVO_GW_Gallons_Per_Minute__c,
  AVO_Permit_gpm__c
)</formula>
    <label>SW and GW GPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>