force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_SW_and_GW_Latitude__c.field-meta.xml
<CustomField>
    <fullName>AVO_SW_and_GW_Latitude__c</fullName>
    <formula>IF(
NOT(ISBLANK(Point_Y__c)),
Point_Y__c,
AVO_Well_Latitude__c)</formula>
    <label>SW and GW Latitude</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>