force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_SW_and_GW_Longitude__c.field-meta.xml
<CustomField>
    <fullName>AVO_SW_and_GW_Longitude__c</fullName>
    <formula>IF(
NOT(ISBLANK(Point_X__c)),
Point_X__c,
AVO_Well_Long__c
)</formula>
    <label>SW and GW Longitude</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>