force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_SW_Pump_Location__c.field-meta.xml
<CustomField>
    <fullName>AVO_SW_Pump_Location__c</fullName>
    <label>SW Pump Location</label>
    <scale>9</scale>
    <type>Location</type>
</CustomField>