force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_SW_Pump_Longitude__c.field-meta.xml
<CustomField>
    <fullName>AVO_SW_Pump_Longitude__c</fullName>
    <label>SW Pump Longitude</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>