force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_SwAppliedDt__c.field-meta.xml
<CustomField>
    <fullName>AVO_SwAppliedDt__c</fullName>
    <label>SW Withdrawal Applied Date</label>
    <type>DateTime</type>
</CustomField>