force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_SwApprovedDt__c.field-meta.xml
<CustomField>
    <fullName>AVO_SwApprovedDt__c</fullName>
    <label>SW Withdrawal Approved Date</label>
    <type>DateTime</type>
</CustomField>