force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ground Water Withdrawal</fullName>
            </value>
            <value>
                <fullName>Surface Water Withdrawal</fullName>
            </value>
            <value>
                <fullName>Ground Water Withdrawal Application</fullName>
            </value>
            <value>
                <fullName>Surface Water Withdrawal Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>