force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_TypeOfStream__c.field-meta.xml
<CustomField>
    <fullName>AVO_TypeOfStream__c</fullName>
    <label>Type Of Stream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INTERMITTENT STREAM</fullName>
            </value>
            <value>
                <fullName>NOT ON STREAM</fullName>
            </value>
            <value>
                <fullName>PERENNIAL STREAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>