force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_USGS_Gauge__c.field-meta.xml
<CustomField>
    <fullName>AVO_USGS_Gauge__c</fullName>
    <label>USGS Gauge #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>