force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_USGS_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_USGS_Source_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>USGS Source Name</label>
    <referenceTo>MUSW__Location__c</referenceTo>
    <relationshipLabel>Withdrawals</relationshipLabel>
    <relationshipName>Withdrawals</relationshipName>
    <type>Lookup</type>
</CustomField>