force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Well__c.field-meta.xml
<CustomField>
    <fullName>AVO_Well__c</fullName>
    <inlineHelpText>Please enter the well number that is replaced as well #N; where N is the well number this is to be replaced</inlineHelpText>
    <label>Well Number Replaced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>