force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Well_Activity_Use__c.field-meta.xml
<CustomField>
    <fullName>AVO_Well_Activity_Use__c</fullName>
    <label>Well Activity Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
            </value>
            <value>
                <fullName>UNUSED</fullName>
            </value>
            <value>
                <fullName>UNDOCUMENTED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>