force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Well_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Well_Installation_Date__c</fullName>
    <label>Well Installation Date</label>
    <type>Date</type>
</CustomField>