force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Well_Location__c.field-meta.xml
<CustomField>
    <fullName>AVO_Well_Location__c</fullName>
    <label>Well Location</label>
    <scale>9</scale>
    <type>Location</type>
</CustomField>