force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Well_Long__c.field-meta.xml
<CustomField>
    <fullName>AVO_Well_Long__c</fullName>
    <label>Well Longitude</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>