force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Well_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_Well_Name__c</fullName>
    <label>Well Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>