force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Well_Number__c.field-meta.xml
<CustomField>
    <fullName>AVO_Well_Number__c</fullName>
    <label>Well Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>