force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Well_Status__c.field-meta.xml
<CustomField>
    <fullName>AVO_Well_Status__c</fullName>
    <label>Well Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plugged/ Abandoned</fullName>
            </value>
            <value>
                <fullName>Active Well</fullName>
            </value>
            <value>
                <fullName>Pending Replacement</fullName>
            </value>
            <value>
                <fullName>New Well</fullName>
            </value>
            <value>
                <fullName>Capped/Dormant</fullName>
            </value>
            <value>
                <fullName>Replacement Well</fullName>
            </value>
            <value>
                <fullName>Undocumented</fullName>
            </value>
            <value>
                <fullName>Never Installed</fullName>
            </value>
            <value>
                <fullName>No Ag Permit Needed</fullName>
            </value>
            <value>
                <fullName>Permit/App Consolidated</fullName>
            </value>
            <value>
                <fullName>Undocumented Consolidated</fullName>
            </value>
            <value>
                <fullName>Pending Well</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>