force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Well_to_Pond_Pump__c.field-meta.xml
<CustomField>
    <fullName>AVO_Well_to_Pond_Pump__c</fullName>
    <label>WTP Pump</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>