force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Well_Vetted_By__c.field-meta.xml
<CustomField>
    <fullName>AVO_Well_Vetted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Well Vetted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Withdrawals</relationshipName>
    <type>Lookup</type>
</CustomField>