force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_WellInstallType__c.field-meta.xml
<CustomField>
    <fullName>AVO_WellInstallType__c</fullName>
    <label>Well Installation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Withdrawal</fullName>
            </value>
            <value>
                <fullName>Replacement Well</fullName>
            </value>
            <value>
                <fullName>Undocumented Well</fullName>
            </value>
            <value>
                <fullName>Undocumented Pump</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>