force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_WellReplaced__c.field-meta.xml
<CustomField>
    <fullName>AVO_WellReplaced__c</fullName>
    <label>Well Replaced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>