force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Wells_Refilling__c.field-meta.xml
<CustomField>
    <fullName>AVO_Wells_Refilling__c</fullName>
    <label># of Wells Refilling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>