force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_WellVettedDate__c.field-meta.xml
<CustomField>
    <fullName>AVO_WellVettedDate__c</fullName>
    <label>Well Vetted Date</label>
    <type>DateTime</type>
</CustomField>