force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Withdrawal_Code__c.field-meta.xml
<CustomField>
    <fullName>AVO_Withdrawal_Code__c</fullName>
    <label>Withdrawal Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>