force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Withdrawal_Location__c.field-meta.xml
<CustomField>
    <fullName>AVO_Withdrawal_Location__c</fullName>
    <label>Withdrawal Location</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>