force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Withdrawal_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_Withdrawal_Name__c</fullName>
    <label>Withdrawal Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>