force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Withdrawal_To_Replace__c.field-meta.xml
<CustomField>
    <fullName>AVO_Withdrawal_To_Replace__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Withdrawal To Replace</label>
    <referenceTo>AVO_Withdrawals__c</referenceTo>
    <relationshipLabel>Withdrawals (Withdrawal To Replace)</relationshipLabel>
    <relationshipName>Withdrawals1</relationshipName>
    <type>Lookup</type>
</CustomField>