force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_WOS_Streams__c.field-meta.xml
<CustomField>
    <fullName>AVO_WOS_Streams__c</fullName>
    <label>NHD Hydrocode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>