force-app/main/default/objects/AVO_Withdrawals__c/fields/AWD_Region__c.field-meta.xml
<CustomField>
    <fullName>AWD_Region__c</fullName>
    <label>AWD Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>