force-app/main/default/objects/AVO_Withdrawals__c/fields/Coastal_24__c.field-meta.xml
<CustomField>
    <fullName>Coastal_24__c</fullName>
    <label>Coastal 24</label>
    <length>255</length>
    <type>Text</type>
</CustomField>