force-app/main/default/objects/AVO_Withdrawals__c/fields/Created_date__c.field-meta.xml
<CustomField>
    <fullName>Created_date__c</fullName>
    <label>Created date</label>
    <type>Date</type>
</CustomField>