force-app/main/default/objects/AVO_Withdrawals__c/fields/CritStrBuf__c.field-meta.xml
<CustomField>
    <fullName>CritStrBuf__c</fullName>
    <label>CritStrBuf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>