force-app/main/default/objects/AVO_Withdrawals__c/fields/DNR_Basins__c.field-meta.xml
<CustomField>
    <fullName>DNR_Basins__c</fullName>
    <label>DNR Basins</label>
    <length>255</length>
    <type>Text</type>
</CustomField>