force-app/main/default/objects/AVO_Withdrawals__c/fields/DNR_River_Basin__c.field-meta.xml
<CustomField>
    <fullName>DNR_River_Basin__c</fullName>
    <label>DNR River Basin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>