force-app/main/default/objects/AVO_Withdrawals__c/fields/FIPS__c.field-meta.xml
<CustomField>
    <fullName>FIPS__c</fullName>
    <label>FIPS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>