force-app/main/default/objects/AVO_Withdrawals__c/fields/FRBPCONZON__c.field-meta.xml
<CustomField>
    <fullName>FRBPCONZON__c</fullName>
    <label>FRBPCONZON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>