force-app/main/default/objects/AVO_Withdrawals__c/fields/GIS_Unique__c.field-meta.xml
<CustomField>
    <fullName>GIS_Unique__c</fullName>
    <label>GIS Unique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>