force-app/main/default/objects/AVO_Withdrawals__c/fields/HUC08__c.field-meta.xml
<CustomField>
    <fullName>HUC08__c</fullName>
    <label>HUC08</label>
    <length>255</length>
    <type>Text</type>
</CustomField>