force-app/main/default/objects/AVO_Withdrawals__c/fields/HUC08_Number__c.field-meta.xml
<CustomField>
    <fullName>HUC08_Number__c</fullName>
    <label>HUC08 Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>