force-app/main/default/objects/AVO_Withdrawals__c/fields/HUC10__c.field-meta.xml
<CustomField>
    <fullName>HUC10__c</fullName>
    <label>HUC10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>