force-app/main/default/objects/AVO_Withdrawals__c/fields/HUC10_Name__c.field-meta.xml
<CustomField>
    <fullName>HUC10_Name__c</fullName>
    <label>HUC10 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>