force-app/main/default/objects/AVO_Withdrawals__c/fields/HUC12__c.field-meta.xml
<CustomField>
    <fullName>HUC12__c</fullName>
    <label>HUC12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>