force-app/main/default/objects/AVO_Withdrawals__c/fields/HUC12_Name__c.field-meta.xml
<CustomField>
    <fullName>HUC12_Name__c</fullName>
    <label>HUC12 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>