force-app/main/default/objects/AVO_Withdrawals__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <label>Inactive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>