force-app/main/default/objects/AVO_Withdrawals__c/fields/Map_Create__c.field-meta.xml
<CustomField>
    <fullName>Map_Create__c</fullName>
    <label>Map Create</label>
    <length>255</length>
    <type>Text</type>
</CustomField>