force-app/main/default/objects/AVO_Withdrawals__c/fields/Meter__c.field-meta.xml
<CustomField>
    <fullName>Meter__c</fullName>
    <label>Meter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>