force-app/main/default/objects/AVO_Withdrawals__c/fields/New_ID__c.field-meta.xml
<CustomField>
    <fullName>New_ID__c</fullName>
    <displayFormat>GW-{00000}</displayFormat>
    <label>Autonumber</label>
    <type>AutoNumber</type>
</CustomField>