force-app/main/default/objects/AVO_Withdrawals__c/fields/Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Object_ID__c</fullName>
    <label>Object ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>