force-app/main/default/objects/AVO_Withdrawals__c/fields/OwNameComm__c.field-meta.xml
<CustomField>
    <fullName>OwNameComm__c</fullName>
    <label>OwNameComm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>