force-app/main/default/objects/AVO_Withdrawals__c/fields/Permit_No__c.field-meta.xml
<CustomField>
    <fullName>Permit_No__c</fullName>
    <label>Permit No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>