force-app/main/default/objects/AVO_Withdrawals__c/fields/Point_X__c.field-meta.xml
<CustomField>
    <fullName>Point_X__c</fullName>
    <label>SW Pump Longitude</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>