force-app/main/default/objects/AVO_Withdrawals__c/fields/Point_Y__c.field-meta.xml
<CustomField>
    <fullName>Point_Y__c</fullName>
    <label>SW Pump Latitude</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>