force-app/main/default/objects/AVO_Withdrawals__c/fields/Pond_Fund__c.field-meta.xml
<CustomField>
    <fullName>Pond_Fund__c</fullName>
    <label>Pond Fund</label>
    <length>255</length>
    <type>Text</type>
</CustomField>