force-app/main/default/objects/AVO_Withdrawals__c/fields/Primary_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_ID__c</fullName>
    <label>Primary ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>