force-app/main/default/objects/AVO_Withdrawals__c/fields/PrioZone__c.field-meta.xml
<CustomField>
    <fullName>PrioZone__c</fullName>
    <label>PrioZone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>