force-app/main/default/objects/AVO_Withdrawals__c/fields/Pump_No__c.field-meta.xml
<CustomField>
    <fullName>Pump_No__c</fullName>
    <label>Pump No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>