force-app/main/default/objects/AVO_Withdrawals__c/fields/Sub_Area_4__c.field-meta.xml
<CustomField>
    <fullName>Sub_Area_4__c</fullName>
    <label>Sub Area 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>