force-app/main/default/objects/AVO_Withdrawals__c/fields/Suspension__c.field-meta.xml
<CustomField>
    <fullName>Suspension__c</fullName>
    <label>Suspension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>