force-app/main/default/objects/AVO_Withdrawals__c/fields/SW_LOC_Expire_Date_for_the_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>SW_LOC_Expire_Date_for_the_Withdrawal__c</fullName>
    <label>SW LOC Expire Date for the Withdrawal</label>
    <type>DateTime</type>
</CustomField>