force-app/main/default/objects/AVO_Withdrawals__c/fields/Unit_of_Flow__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Flow__c</fullName>
    <label>Unit of Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFS</fullName>
            </value>
            <value>
                <fullName>GPM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>