force-app/main/default/objects/AVO_Withdrawals__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <label>Verified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>