force-app/main/default/objects/AVO_Withdrawals__c/fields/Withdrawals__c.field-meta.xml
<CustomField>
    <fullName>Withdrawals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Withdrawals</label>
    <referenceTo>AVO_Withdrawals__c</referenceTo>
    <relationshipLabel>Withdrawals</relationshipLabel>
    <relationshipName>Withdrawals</relationshipName>
    <type>Lookup</type>
</CustomField>