force-app/main/default/objects/AVO_Withdrawals__c/recordTypes/Ground_Water_Withdrawal.recordType-meta.xml
<RecordType>
    <fullName>Ground_Water_Withdrawal</fullName>
    <active>true</active>
    <label>Ground Water Withdrawal</label>
</RecordType>