force-app/main/default/objects/AVO_Withdrawals__c/recordTypes/Ground_Water_Withdrawal_Application.recordType-meta.xml
<RecordType>
    <fullName>Ground_Water_Withdrawal_Application</fullName>
    <active>true</active>
    <label>Ground Water Withdrawal Application</label>
</RecordType>