force-app/main/default/objects/AVO_Withdrawals__c/recordTypes/Surface_Water_Withdrawal.recordType-meta.xml
<RecordType>
    <fullName>Surface_Water_Withdrawal</fullName>
    <active>true</active>
    <label>Surface Water Withdrawal</label>
</RecordType>