force-app/main/default/objects/AVO_Withdrawals__c/recordTypes/Surface_Water_Withdrawal_Application.recordType-meta.xml
<RecordType>
    <fullName>Surface_Water_Withdrawal_Application</fullName>
    <active>true</active>
    <label>Surface Water Withdrawal Application</label>
</RecordType>