force-app/main/default/objects/AVO_Withdrawals__c/recordTypes/Withdrawal_GIS_Data.recordType-meta.xml
<RecordType>
    <fullName>Withdrawal_GIS_Data</fullName>
    <active>true</active>
    <label>Withdrawal GIS Data</label>
</RecordType>