force-app/main/default/objects/AVO_Withdrawals__c/validationRules/AVO_Casing_Must_Be_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_Casing_Must_Be_Greater_Than_Zero</fullName>
    <active>true</active>
    <description>Casing(ft) value must be greater than zero and less than the Depth(ft) value.</description>
    <errorConditionFormula>AND(
    OR(RecordType.DeveloperName = &quot;Ground_Water_Withdrawal&quot;,
RecordType.DeveloperName = &quot;Ground_Water_Withdrawal_Application&quot;
),
    NOT(ISBLANK(AVO_Casing_ft__c)),
    NOT(ISBLANK(AVO_Depth_ft__c)),
    OR (AVO_Casing_ft__c  &lt;= 0,
    AVO_Casing_ft__c  &gt;= AVO_Depth_ft__c)
)</errorConditionFormula>
    <errorDisplayField>AVO_Casing_ft__c</errorDisplayField>
    <errorMessage>Value must be greater than zero and less than the Depth (ft) value.</errorMessage>
</ValidationRule>