force-app/main/default/objects/AVO_Withdrawals__c/validationRules/AVO_Date_Replaced_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_Date_Replaced_Required</fullName>
    <active>true</active>
    <description>Date Well Replaced is mandatory when Well Status is Replacement Well</description>
    <errorConditionFormula>AND(
ISBLANK( AVO_DateReplaced__c ),
ISPICKVAL(AVO_Well_Status__c, &quot;Replacement Well&quot;)
)</errorConditionFormula>
    <errorDisplayField>AVO_DateReplaced__c</errorDisplayField>
    <errorMessage>Field is required when Well Status is Replacement Well.</errorMessage>
</ValidationRule>