force-app/main/default/objects/AVO_Withdrawals__c/validationRules/AVO_Depth_Must_Be_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_Depth_Must_Be_Greater_Than_Zero</fullName>
    <active>true</active>
    <description>Depth(ft) value must be greater than zero.</description>
    <errorConditionFormula>AND(
OR(
RecordType.DeveloperName = &quot;Ground_Water_Withdrawal&quot;,
RecordType.DeveloperName = &quot;Ground_Water_Withdrawal_Application&quot;
),
NOT(ISBLANK(AVO_Depth_ft__c)),
AVO_Depth_ft__c &lt; 0
)</errorConditionFormula>
    <errorDisplayField>AVO_Depth_ft__c</errorDisplayField>
    <errorMessage>Value must be greater than zero.</errorMessage>
</ValidationRule>