force-app/main/default/objects/AVO_Withdrawals__c/validationRules/AVO_GW_GPM_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_GW_GPM_Greater_Than_Zero</fullName>
    <active>true</active>
    <description>GW Gallons Per Minute value must be greater than zero.</description>
    <errorConditionFormula>AVO_GW_Gallons_Per_Minute__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>AVO_GW_Gallons_Per_Minute__c</errorDisplayField>
    <errorMessage>Value must be greater than zero.</errorMessage>
</ValidationRule>