force-app/main/default/objects/AVO_Withdrawals__c/validationRules/AVO_InstallerID_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_InstallerID_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
RecordType.Name = &apos;Ground Water Withdrawal Application&apos;,
RecordType.Name = &apos;Ground Water Withdrawal&apos;
),
NOT(ISNEW()),
ISBLANK( AVO_InstallerID__c ),
ISPICKVAL( AVO_Permit__r.MUSW__Status__c, &apos;Final Evaluation&apos;) 
)</errorConditionFormula>
    <errorDisplayField>AVO_InstallerID__c</errorDisplayField>
    <errorMessage>The field InstallerId  is required If the Permit status is in &apos;Final Evaluation&apos;.</errorMessage>
</ValidationRule>